# Philosophers

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_strlen.c  ggg.c  philosophers.c  philosophers.h  test.c
philo_one/: Makefile  defines.h  ft_free_xxx.c  ft_itoa.c  ft_join_3_ptr.c  ft_putnbr_fd.c  ft_start.c  ft_str_for_msg.c  ft_strlen.c  ft_utils.c  philosophers.c  philosophers.h
philo_three/: Makefile  defines.h  ft_free_xxx.c  ft_itoa.c  ft_start.c  ft_utils.c  philosophers.c  philosophers.h
philo_two/: Makefile  defines.h  ft_free_xxx.c  ft_join_3_ptr.c  ft_start.c  ft_str_for_msg.c  ft_utils.c  philosophers.c  philosophers.h
